# boletare

./: .gitignore  kundli_flow.html  mlflow.db  pyproject.toml
data/: jyotish_ai.db
data/geocoding/: indian_cities.json
data/training/: .gitignore  all_charts_merged.json  feature_vectors.json.dvc  hindu_predictive_astrology.json  merge_manifest.json  notable_horoscopes.json.dvc  sanjay_rath_crux.json  training_metadata.json  training_set.npz.dvc
docs/: FEATURE_ROADMAP_CALCULATORS.md  ML_PIPELINE_REVIEW_AND_RECOMMENDATIONS.md  MODEL_TRAINING_PROCESS.md  PLAN_PRODUCTION_PIPELINE.md  PLAN_TRAIN_XGBOOST_MODEL.md  PLAN_XGBOOST_TRAINING.md  PRODUCTION_PIPELINE_DISCUSSION_SUMMARY.md  SOLUTION_OVERVIEW.md  TRAINING_DATA_SOURCES.md  XGBOOST_ML_GUIDE.md  XGBOOST_TRAINING_DATA_RESEARCH.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  theme.css
scripts/: debug_request.py
scripts/training/: 01_download_ocr.py  01b_download_all_ocr.py  02_parse_horoscopes.py  02b_parse_technique_books.py  02c_parse_hpa.py  02d_parse_magazines.py  02e_parse_sanjay_rath.py  ocr_sources.py  (+10 more)
technical_Learning/: Discussion_Summary.md  Discussion_Summary_20260320.md  Discussion_Summary_20260322.md  ML-Concepts.md
tests/: conftest.py  test_api.py  test_ashtakavarga.py  test_auth.py  test_convergence.py  test_dasha.py  test_delivery.py  test_dignity.py  test_doshas.py  test_ephemeris.py  test_feature_builder.py  test_gate1.py  test_gate2.py  test_houses.py  test_narration.py  test_navamsha.py  test_quality_flags.py  test_types.py  test_yogas.py
(+99 files in other folders)
