[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jyotish-ai"
version = "0.1.0"
description = "Vedic Astrology Prediction Engine — Deterministic computation with ML evaluation"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.30",
    "aiosqlite>=0.20.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "pyswisseph>=2.10.0",
    "anthropic>=0.40.0",
    "httpx>=0.27.0",
    "numpy>=1.26.0",
    "apscheduler>=3.10.0",
    "bcrypt>=4.0.0",
    "python-jose[cryptography]>=3.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
]
ml = [
    "xgboost>=2.0.0",
    "shap>=0.45.0",
    "scikit-learn>=1.4",
    "matplotlib>=3.8",
]
training = [
    "internetarchive>=4.0.0",
    "dvc>=3.50.0",
    "mlflow>=2.15.0",
    "prefect>=3.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"
